--- a/package.json
+++ b/package.json
@@ -10,15 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.9.0",
     "bootstrap": "^5.3.6",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.10",
-    "react-dom": "^19.1.0",
     "react-data-table-component": "^7.6.2",
+    "react-dom": "^19.1.0",
+    "react-icons": "^5.3.0",
+    "react-router-dom": "^6.30.1",
     "react-tabs": "^6.0.2",
-    "react-toastify": "^10.0.5",
-    "react-router-dom": "^6.26.0",
-    "react-icons": "^5.3.0"
+    "react-toaster": "^0.0.3",
+    "react-toastify": "^10.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
